# kool.sh

./: .bazel_fix_commands.json  .gitignore  BUILD.bazel  README.md  fly.toml  go.mod  justfile
templates/: index.html.tmpl
